                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1

  *) [TS-1006] memory management, cut down memory usage
     Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1678] Simplify register_record
     Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1252] stats summary in cluster not working
     Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1679] channel_stats plugin: count 5xx response and clean up code
     Author: Conan Wang

  *) [TS-1676] FetchSM (TSFetchUrl) cannot handle POST bodies > 32kb.

  *) [TS-1675] Adding API method TSHttpTxnClientIncomingPortSet

  *) [TS-1674] TSStatIntDecrement is broken: the logic is flawed.

  *) [TS-1673] Remap with recv port is using the wrong port 

  *) [TS-1672] Emergency throttling can continue forever.

  *) [TS-1650] Inactivity cop should use TRY_LOCK instead of LOCK to avoid deadlock.

  *) [TS-1649] Don't use ink_bind if we're not specifying a local port

  *) [TS-1667] remove unused enum TSIOBufferDataFlags

  *) [TS-1538] SSL accept performance regression

  *) [TS-977] RecCore usage cleanup

  *) [TS-1574] [TS-1577] when read_from_writer, we should not do range acceleration.
   Range request can invalidate cached copy if the server reponse is 304.

  *) [TS-1609] Traffic Cop doesn't wait() for its children

  *) [TS-1601] HttpServerSession::release don't close ServerSession if ServerSessionPool locking contention

  *) [TS-1643] Post requests with no Content-Length header sends default error response

  *) [TS-1640] SSL certificate reconfiguration only works once

  *) [TS-1246] trafficserver script error message (in ubuntu)

  *) [TS-1630] Add Lua API for TSHttpTxnCacheLookupStatusGet

  *) [TS-1423] Added option to do transparent passthrough on
   connections that are not valid HTTP.

  *) [TS-1599] set OpenSSL allocator with CRYPTO_set_mem_functions

  *) [TS-1624] Remove JEMALLOC_P use, it seems to have been deprecated.
